# clerk-fapi-rs

./: Cargo.toml  README.md  fapi_swagger.json
.github/workflows/: checks.yml
examples/: Cargo.toml  basic_usage.rs  basic_usage_sign_in.rs  basic_usage_sign_up.rs
examples/.cargo/: config.toml
examples/dioxus-example/: Cargo.toml  README.md  package-lock.json  package.json
examples/dioxus-example/assets/: tailwind.css
examples/dioxus-example/src/: main.rs  use_clerk.rs
examples/src/: lib.rs
src/: clerk.rs  clerk_fapi.rs  clerk_http_client.rs  clerk_state.rs  configuration.rs  lib.rs  utils.rs
src/apis/: active_sessions_api.rs  backup_codes_api.rs  client_api.rs  configuration.rs  default_api.rs  dev_browser_api.rs  domains_api.rs  email_addresses_api.rs  environment_api.rs  external_accounts_api.rs  health_api.rs  invitations_api.rs  members_api.rs  membership_requests_api.rs  mod.rs  o_auth2_callbacks_api.rs  o_auth2_identify_provider_api.rs  organization_api.rs  organizations_memberships_api.rs  passkeys_api.rs  phone_numbers_api.rs  redirect_api.rs  roles_api.rs  saml_api.rs  sessions_api.rs  sign_ins_api.rs  sign_ups_api.rs  totp_api.rs  user_api.rs  waitlist_api.rs  web3_wallets_api.rs  well_known_api.rs
src/models/: backup_codes.rs  client_account_portal.rs  client_account_portal_customization.rs  client_active_session.rs  client_auth_config.rs  client_client.rs  client_client_wrapped_client.rs  client_client_wrapped_deleted_object.rs  client_client_wrapped_image.rs  client_client_wrapped_session.rs  client_display_config.rs  (+179 more)
tests/: clerk_tests.rs
